--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     Test
 
     <script>
+        window.DATA = {{DATA}};
         console.log(window.DATA); // тут должна вывестись строка DATA
     </script>
 </body>
